--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,14 @@
-<!DOCTYPE html>
 <html>
-	<head>
-		<title>Word Search Puzzle</title>
-		<meta charset="UTF-8" />
-		<script src="http://code.jquery.com/jquery-1.10.1.min.js" type="text/javascript"></script>
-	</head>
-	<body>
-		<div id="step1">
-			Words list: <textarea id="words"></textarea><br />
-			Puzzle: <textarea id="puzzleText"></textarea>
-			<input type="button" name="toStep2" value="Continue" id="toStep2" />
-		</div>
-	</body>
+  <head>
+    <title>Word Search Puzzle</title>
+    <meta charset="UTF-8" />
+    <!-- Load JavaScript -->
+    <script src="http://code.jquery.com/jquery-1.10.1.min.js" type="text/javascript"></script>
+  </head>
+  <body>
+    <!-- Input content -->
+    <div id="step1"></div>
+    <!-- Result content -->
+    <div id="step2"></div>
+  </body>
 </html>
