--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,30 @@
     <meta charset="UTF-8" />
     <!-- Load JavaScript -->
     <script src="http://code.jquery.com/jquery-1.10.1.min.js" type="text/javascript"></script>
+    <script src="js/puzzle.js" type="text/javascript"></script>
   </head>
   <body>
     <!-- Input content -->
-    <div id="step1"></div>
+    <div id="step1">
+      <!-- Words to be found -->
+      Words list: <textarea id="words"></textarea><br />
+      <!-- the puzzle -->
+      Puzzle: <textarea id="puzzleText"></textarea><br />
+      <!-- Prepare the puzzle -->
+      <input type="button" name="toStep2" value="Continue" id="toStep2" />
+    </div>
+    
     <!-- Result content -->
-    <div id="step2"></div>
+    <div id="step2" style="display:none">
+      <!-- display the puzzle in the table -->
+      <table id="puzzle"></table>
+      <!-- buttons to go back to step 1 and find the solution -->
+      <input type="button" name="back" value="Go back to step 1" id="back" /><br />
+      <input type="button" name="check" value="Check words" id="check" /><br />
+      <!-- Satistics and the solution -->
+      Found :<input type="text" name="wFound" value="0" id="wFound" /> / <span id="wTotal"></span><br />
+      Not found: <div id="nFound"></div>
+      Solution: <div id="pSolution"></div>
+    </div>
   </body>
 </html>
