--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,10 @@
     <!-- Load JavaScript libraries -->
     <script src="http://code.jquery.com/jquery-1.10.1.min.js" type="text/javascript"></script>
     <script src="js/puzzle.js" type="text/javascript"></script>
+    <style type="text/css">
+			table#puzzle { text-align:center;border-collapse:collapse; padding:0px }
+			table#puzzle td { width:20px; border: 1px solid }
+		</style>
   </head>
   <body>
     <!-- Input content -->
